# ur_moving

./: LICENSE  README.md
ur_moving/: CMakeLists.txt  jointSpots.txt  package.xml
ur_moving/launch/: ur3_getter.launch  ur3_moving.launch
ur_moving/msg/: allJoints.msg  endEffector.msg  singleJoint.msg
ur_moving/src/: ur_getter.cpp  ur_setter.cpp
