<?xml version="1.0"?>
<package>
  <name>ur3_moving</name>
  <version>0.1.0</version>
  <description>movinv UR3</description>
  <license>BSD</license>

  <author email="todo@todo.com">Me, Myself Aand I</author>
  <maintainer email="todo@todo.com">Me, Myself Aand I</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_fake_controller_manager</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>moveit_ros_perception</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>moveit_visual_tools</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
